# videoAutoCut

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-clip.txt  requirements.txt
configs/: default.yaml
docs/decisions/: 0001-architecture-invariants.md
input/: .gitkeep
output/: .gitkeep
prompts/: scenery.zh.txt
scripts/: fetch_assets.sh  preload_models.sh  run_phase2.sh  setup.sh
src/assemble/: analyze_music.py  cut_demo.py  cut_demo_v2.py
src/ingest/: __init__.py  __main__.py  frame_extractor.py
src/scoring/: media_indexer.py
src/shots/: __init__.py  __main__.py  pyscenedetect_wrapper.py  transnetv2_refiner.py
