[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videoautocut"
version = "0.1.0"
description = "Auto-editor for travel footage — short clips for Douyin / 小红书 / YouTube."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "MarchWen", email = "zhenyuwen1993@gmail.com" },
]
keywords = ["video", "editing", "auto-cut", "clip", "highlight-detection"]

dependencies = [
    # core video / IO
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "opencv-python>=4.10",
    "pillow>=10.0",
    # numerical / utils
    "numpy>=1.26,<3",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "click>=8.1",
    "pyyaml>=6.0",
    "numba>=0.59",
    # shot segmentation
    "scenedetect[opencv]>=0.6.4",
    # vision models
    "torch>=2.2,<2.6",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "open_clip_torch>=2.24",
    "transformers>=4.40",
    "huggingface_hub>=0.23",
    "safetensors>=0.4",
    # voice
    "silero-vad>=5.1",
    "faster-whisper>=1.0.3",
    "whisperx>=3.1.5",
    "dashscope>=1.20",
    "anthropic>=0.40",
    # audio
    "librosa>=0.10",
    "soundfile>=0.12",
    # music generation
    "audiocraft>=1.3.0",
    # misc
    "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
videoautocut-ingest = "src.ingest.__main__:main"
videoautocut-shots = "src.shots.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
